fix: Correctly align competition rules list

--- a/snek/style.css
+++ b/snek/style.css
@@ -65,7 +65,7 @@ html {
     line-height: 1.4;
 }
 
-.intro-text.privacy {
+.intro-text.rules-container {
     text-align: left;
 }
 
